bullshit css fix because scrollbar causing shift

--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
 body {
     max-width: max-content;
     margin:auto;
+    min-height: 1080px;
     }
 
 #body {
     max-width: 1080px;
-    min-width: 550px;
+    min-width: 720px;
     padding-bottom: 10px;
-    width: fit-content;
-    border-color: grey;
-    border-style: solid;
     margin-top: 20px;
     margin-bottom: 20px;
     padding-left: 10px;
+    padding: 20px;
+    
 }
 #title {
     padding-left: 5px;
@@ -25,11 +25,7 @@ body {
     border-right-style: solid;
     border-width: 1px;
     border-color: black;
-    padding-top: 0px;
-    padding-left: 2px;
-    padding-right: 2px;
-    padding-bottom: 3px;
-
+    padding: 5px;
     text-align: center;
     margin: auto;
     width: fit-content;
@@ -46,8 +42,12 @@ body {
     text-align: justify;
 }
 .blogpost {
+    margin: 10px;
     padding-left: 10px;
     padding-right: 10px;
+    border-color: grey;
+    border-style: solid;
+    border-radius: 10px;
 }
 
 .content{
